Fix gap

--- a/src/BlazorERP/wwwroot/custom.css
+++ b/src/BlazorERP/wwwroot/custom.css
@@ -121,7 +121,6 @@ fluent-text-field, fluent-number-field, fluent-select{
 
 .input-group {
     display: flex;
-    gap: .25em;
     align-items: center;
     flex-wrap: wrap;
 }
